# Self-Learning-Vision

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml
apps/api/: Dockerfile  constraints.txt  desktop_launcher.py  pyproject.toml  requirements-desktop.txt  requirements-optional.example.txt  requirements-production.txt  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: auth.py
apps/api/app/core/: async_db.py  celery_app.py  config.py  db.py  security.py
apps/api/app/middleware/: request_id.py
apps/api/app/models/: __init__.py  activity.py  memory_run.py  types.py  upload.py  user.py
apps/api/app/providers/: README.md  __init__.py  base.py  insightface_provider.py  local.py  template_paid_provider.py
apps/api/app/schemas/: __init__.py  api.py  auth.py  memory_report.py
apps/api/packaging/: self_learning_vision_api.spec
apps/api/scripts/: create_demo_fixtures.py  download_models.py
apps/api/tests/: test_active_learning_registry.py  test_core_engine.py  test_desktop_launcher.py  test_domain_templates.py  test_evaluation.py  test_learning_loop.py  test_memory_corrections.py  test_memory_entity_registry.py  test_memory_lifecycle.py  test_memory_quality_toolkit.py  test_privacy_vault.py  test_provider_marketplace.py  test_unknown_face_registry.py  test_v02_production_adapters.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
docs/: download.md  (+25 more)
(+121 files in other folders)
